# CloudGentGran

./: .env.example  .gitignore  README.md  docker-compose.local.yaml  env_template  package-lock.json
.github/tests/: push-merge.json
.github/workflows/: ci-cd.yml  debug-oidc.yml
dbt/: Dockerfile  docker-compose.yml
dbt/mart/: README.md  dbt_project.yml  profiles_template.yml
dbt/mart/macros/: read_staging_data.sql
dbt/mart/models/: schema.yml
docs/: FAQ.md  architecture.md  aws-secrets-setup.md  rust_lambda_builds.md  technical_contributors.md
infrastructure/: README.md  cdk.json  deploy-localstack.sh  package-lock.json  package.json
infrastructure/lib/: analytics-construct.ts  catalog-construct.ts  config.ts  glue-construct.ts  iam-construct.ts  infrastructure-stack.ts  lambda-construct.ts  s3-construct.ts  web-construct.ts
infrastructure/test/: infrastructure.test.ts
lambda/: Cargo.toml
lambda/catalog/: catalog_initializer.py
lambda/catalog/municipals/: municipals_initializer.py  requirements.txt
lambda/catalog/service_qualification/: service_qualification_initializer.py
lambda/catalog/service_type/: service_type_initializer.py
lambda/extractors/: README.md  api_extractor.py  test_api_extractor.py
lambda/extractors/api_extractor_events/: api-extractor-event.json
lambda/extractors/comarques_boundaries/: api_extractor.py  local_run.py  requirements.txt  test_comarques_boundaries_api_extractor.py
lambda/extractors/population_municipal_greater_65/: api_extractor.py  test_api_extractor.py
lambda/extractors/sam/: api-extractor-event.json  localstack-env.json  samconfig.toml  template.yaml
lambda/extractors/social_services/: README.md  api_extractor.py
lambda/mart/population_municipal_greater_65_mart/: Cargo.toml  README.md
lambda/mart/population_municipal_greater_65_mart/src/: generic_handler.rs
lambda/service/deploy_observable/: index.js  package-lock.json  package.json  test-local.sh
lambda/transformers/population_municipal_greater_65/: Cargo.toml  README.md
lambda/transformers/population_municipal_greater_65/src/: generic_handler.rs
lambda/transformers/social_services/: .gitignore  00002000.json  Cargo.toml  local_test.rs  requirements.txt  transform_handler.py  transform_handler.rs
lambda/transformers/social_services/analysis/: social_services_transformations.ipynb  unique_tipologia.ods
lambda/transformers/social_services/src/: main.rs
localstack/: docker-compose.yml  setup-localstack.sh
observable/: README.md  observablehq.config.js  package-lock.json  package.json
observable/src/: index.md  parquet-example.md
observable/src/data/: example-parquet.json.js  (+7 more)
orchestration/: .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  requirements.txt
orchestration/airflow/: __init__.py
orchestration/config/: airflow.cfg
orchestration/dags/: catalunya_catalog_initializer.py  catalunya_comarques_boundaries_dag.py  catalunya_data_pipeline.py  catalunya_dbt_social_services.py  catalunya_long_term_update.py  catalunya_social_services_dag.py  simple_dbt_test.py  standalone_observable.py
orchestration/docker/: entrypoint.sh
orchestration/plugins/: __init__.py
orchestration/scripts/: setup_dbt.sh
orchestration/tests/: test_orchestration.py
scripts/: start-local-dev.sh  test-act.sh  test-localstack.sh
scripts/deploy/: deploy-orchestration.sh
scripts/setup/: attach-lambda-permissions.sh  attach-mart-permissions.sh  attach-minimal-permissions.sh  attach-transformer-permissions.sh  create-iam-roles.sh  extract_aws_credentials.sh  roles-deployment.sh
(+24 files in other folders)
