[workspace]
members = [
    "transformers/social_services",
    "transformers/population_municipal_greater_65",
    "mart/population_municipal_greater_65_mart",
]
resolver = "2"

[workspace.dependencies]
lambda_runtime = "0.14.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106.0"
aws-sdk-glue = "1.121.0"
regex = "1.11.3"
polars = { version = "0.51.0", features = ["json", "parquet", "temporal", "lazy", "strings", "regex"] }
anyhow = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }