[package]
name = "population_municipal_greater_65"
version = "0.1.0"
edition = "2021"

[dependencies]

lambda_runtime = "0.14.4"
serde = "1"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106.0"
regex = "1.11.3"
polars = { version = "0.51.0", features = ["json", "parquet", "temporal", "lazy", "strings", "regex"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }