[package]
name = "population_municipal_greater_65"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
regex.workspace = true
polars.workspace = true
anyhow.workspace = true
chrono.workspace = true