[package]
name = "social-services-transformer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "local_test"
path = "local_test.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
aws-sdk-glue = "1.121.0"
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.106.0"

# Data processing
polars = { version = "0.41", features = ["json", "parquet", "temporal", "lazy", "strings", "regex"] }

# Lambda runtime
lambda_runtime = "0.14.4"
