[package]
name = "social-services-transformer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[[bin]]
name = "local_test"
path = "local_test.rs"

[dependencies]
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-glue.workspace = true
regex.workspace = true
polars.workspace = true
anyhow.workspace = true
chrono.workspace = true